@@ -1,4 +1,4 @@
-# CHECKSUMS file written on Mon Oct  7 08:53:11 2002 by CPAN::Checksums (v1.011)
+# CHECKSUMS file written on Mon Oct  7 08:58:28 2002 by CPAN::Checksums (v1.011)
 $cksum = {
   'RCS' => {
     'isdir' => 1
