@@ -1,6 +1,8 @@
 head	1.2;
 access;
 symbols
+	v1_014:1.2
+	v1_011:1.2
 	v1_0:1.2
 	v1_009:1.2
 	v1_008:1.2
