@@ -1,3 +1,8 @@
+2003-02-02  Andreas J. Koenig  <andreas.koenig@anima.de>
+
+	* Added optional GnuPG signing of CHECKSUMS files. Courtesy
+	Autrijus Tang.
+
 2002-10-06  Andreas J. Koenig  <andreas.koenig@anima.de>
 
 	* Turn off the generation of 8.3 filenames per default, keep it
